# QCustomPlot_precompiled

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: CMakeLists.txt  qcustomplot.cpp
